2010-09-08  Yves Blusseau  <blusseau@zetam.org>

	* configure.ac: Define some useful variables.

2010-09-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/ieee1275/cmain.c (grub_ieee1275_find_options): Set
	GRUB_IEEE1275_FLAG_HAS_CURSORONOFF when appropriate.
	* grub-core/term/ieee1275/ofconsole.c (grub_ofconsole_setcursor):
	Use terminfo and don't use cursor-on/cursor-off unless it's known
	to work.
	* include/grub/ieee1275/ieee1275.h (grub_ieee1275_flag): New element
	GRUB_IEEE1275_FLAG_HAS_CURSORONOFF.

2010-09-08  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/kern/efi/init.c (grub_efi_set_prefix): If the prefix
	starts with "(,", fill the drive containing the loaded image in
	between those two characters, but expect that a full partition
	specification including partition map names will follow.

2010-09-08  Robert Millan  <rmh@gnu.org>

	* configure.ac: Remove `--enable-grub-fstest' option.
	* Makefile.util.def (grub-fstest): Remove COND_GRUB_FSTEST condition.

	* util/grub-mkconfig_lib.in (is_path_readable_by_grub): Use
	`grub-fstest' instead of `grub-probe' for readability verification.
	* util/grub-probe.c (probe): Remove readability verification kludge.

2010-09-08  Robert Millan  <rmh@gnu.org>

	* util/grub-mkconfig.in: Pass `--device ${GRUB_DEVICE}' when
	initializing `GRUB_FS'.

2010-09-08  BVK Chaitanya  <bvk.groups@gmail.com>

	Not command (!) support to GRUB script.

	* tests/grub_script_not.in: New test.
	* Makefile.util.def: Rules for new test.

	* grub-core/script/execute.c (grub_script_execute_cmdline): Handle
	! command as a special case.
	* grub-core/script/yylex.l (GRUB_PARSER_TOKEN_NOT): Removed.

2010-09-07  BVK Chaitanya  <bvk.groups@gmail.com>

	* grub-core/commands/wildcard.c (wildcard_expand): Fix wrong
	grub_free.

2010-09-07  BVK Chaitanya  <bvk.groups@gmail.com>

	* docs/grub.texi (Shell-like scripting): Fix @dots to @dots{}.

2010-09-07  BVK Chaitanya  <bvk.groups@gmail.com>
